--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-    <body bgcolor="green">
-        <h1>welcome Django students</h1>
-        <img src="11.jpg">
+    <body bgcolor="pink">
+        <h1>welcome mern students</h1>
+        <img src="11.jpg" width="200" height="200>
     </body>
 </html>
